--- a/index.html
+++ b/index.html
@@ -11,62 +11,62 @@
     <section class="card-container">
         <div class="card" data-frame="aurelia">
             <img class="front" src="./aurelia.svg" alt="aurelia" />
-            <img class="back" src="/dev.png" alt="dev">
+            <img class="back" src="dev.png" alt="dev">
         </div>
 
         <div class="card" data-frame="aurelia">
             <img class="front" src="./aurelia.svg" alt="aurelia" />
-            <img class="back" src="/dev.png" alt="dev">
+            <img class="back" src="dev.png" alt="dev">
         </div>
 
         <div class="card" data-frame="vue">
             <img class="front" src="./vue.svg" alt="aurelia" />
-            <img class="back" src="/dev.png" alt="dev">
+            <img class="back" src="dev.png" alt="dev">
         </div>
 
         <div class="card" data-frame="vue">
             <img class="front" src="./vue.svg" alt="aurelia" />
-            <img class="back" src="/dev.png" alt="dev">
+            <img class="back" src="dev.png" alt="dev">
         </div>
 
         <div class="card" data-frame="angular">
             <img class="front" src="./angular.svg" alt="aurelia" />
-            <img class="back" src="/dev.png" alt="dev">
+            <img class="back" src="dev.png" alt="dev">
         </div>
 
         <div class="card" data-frame="angular">
             <img class="front" src="./angular.svg" alt="aurelia" />
-            <img class="back" src="/dev.png" alt="dev">
+            <img class="back" src="dev.png" alt="dev">
         </div>
 
         <div class="card" data-frame="ember">
             <img class="front" src="./ember.svg" alt="aurelia" />
-            <img class="back" src="/dev.png" alt="dev">
+            <img class="back" src="dev.png" alt="dev">
         </div>
 
         <div class="card" data-frame="ember">
             <img class="front" src="./ember.svg" alt="aurelia" />
-            <img class="back" src="/dev.png" alt="dev">
+            <img class="back" src="dev.png" alt="dev">
         </div>
 
         <div class="card" data-frame="backbone">
             <img class="front" src="./backbone.svg" alt="backbone" />
-            <img class="back" src="/dev.png" alt="dev">
+            <img class="back" src="dev.png" alt="dev">
         </div>
 
         <div class="card" data-frame="backbone">
             <img class="front" src="./backbone.svg" alt="backbone" />
-            <img class="back" src="/dev.png" alt="dev">
+            <img class="back" src="dev.png" alt="dev">
         </div>
 
         <div class="card" data-frame="react">
             <img class="front" src="./react.svg" alt="react" />
-            <img class="back" src="/dev.png" alt="dev">
+            <img class="back" src="dev.png" alt="dev">
         </div>
 
         <div class="card" data-frame="react">
             <img class="front" src="./react.svg" alt="react" />
-            <img class="back" src="/dev.png" alt="dev">
+            <img class="back" src="dev.png" alt="dev">
         </div>
     </section>
     
